Fixed concurrent mod issue.